WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
NEW
33692
Web Inspector: console evaluates in wrong world and call frame when debugger is paused
https://bugs.webkit.org/show_bug.cgi?id=33692
Summary
Web Inspector: console evaluates in wrong world and call frame when debugger ...
Timothy Hatcher
Reported
2010-01-14 15:01:16 PST
Debugging a script in an isolated world needs to evaluate console input in that world. Currently the evaluation always happens in the main world.
Attachments
Add attachment
proposed patch, testcase, etc.
Brian Burg
Comment 1
2014-08-03 18:49:10 PDT
Still an issue, making it rather hard to poke at state further up in the call stack.
Radar WebKit Bug Importer
Comment 2
2014-08-03 18:49:17 PDT
<
rdar://problem/17898313
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug